# static-nginx-benchmark

./: .gitignore  README.md  gatling-conf.scala  testing.sh
fasthttp-go/: server.go
fasthttp-go/static/: small.txt
go/: Dockerfile  server.go
nginx/: Dockerfile  README.md  localhost.key  nginx.conf
nginx-odirect/: Dockerfile  localhost.crt  nginx.conf
nginx-odirect/static/: med.txt
nginx/static/: big.txt  small.txt
project/: Cargo.toml  Dockerfile  config.yml  roadmap
project/src/: config.rs  file_manager.rs  main.rs  ssl.rs
rust-actix/: Cargo.toml  Dockerfile
rust-actix/src/: main.rs  user1-cert.p12
rust-actix/static/: med.txt
rust-tokio/: Cargo.toml  Dockerfile  rust-tokio
rust-tokio-tls/: Cargo.toml  Dockerfile  server
rust-tokio-tls/src/: identity.p12  main.rs
rust-tokio-tls/static/: med.txt
rust-tokio/src/: main.rs
rust-tokio/static/: med.txt
rust_sendfile/: Cargo.toml  Dockerfile
rust_sendfile/src/: main.rs
rust_sendfile/static/: med.txt
