[package]
name = "static-server"
version = "0.0.1"
authors = ["kai25 <vitaly.om25@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = { version = "1.0.0-beta.5", features=["ssl"] }
bytes = "0.4.0"
openssl = "0.10.22"
serde = "1.0.91"
serde_yaml = "0.8"
log = "0.4.6"
env_logger = "0.6.1"
futures = "0.1.27"
